@@ -1,5 +1,11 @@
 2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* NEWS, src/useradd.c: Make sure the passwd, group, shadow, and
+	gshadow files are unlocked on exit. Unlock locked files in
+	fail_exit(). Prefer fail_exit() over exit().
+
+2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* NEWS, src/groupdel.c: Make sure the group, and gshadow files are
 	unlocked on exit. Add function fail_exit(). Use fail_exit()
 	instead of exit().
